--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header>
         <div>
             <img 
-            src="https://github.com/TheGamePlay523.png" 
+            src="https://github.com/Aonc-ctrl.png" 
             alt="foto de Erick Erlan na frente do espelho">
         </div>
       </header>
